--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -50,8 +50,12 @@ jobs:
         with:
           name: Build
           path: build
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.0.0
+      # - name: Deploy 🚀
+      #   uses: JamesIves/github-pages-deploy-action@4.0.0
+      #   with:
+      #     branch: gh-pages # The branch the action should deploy to.
+      #     folder: build/WebGL # The folder the action should deploy.
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: build/WebGL # The folder the action should deploy.
+          publish_dir: ./build/WebGL
