--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -56,5 +56,6 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.0.0
         with:
+          working-directory: ./Asset
           branch: gh-pages # The branch the action should deploy to.
           folder: Scene # The folder the action should deploy.
