--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -57,4 +57,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.0.0
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: /Assets/Scene # The folder the action should deploy.
+          folder: Assets/Scene # The folder the action should deploy.
