--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -42,20 +42,20 @@ jobs:
       #   with:
       #     name: Test results (all modes)
       #     path: ${{ steps.testRunner.outputs.artifactsPath }}
-      # - uses: webbertakken/unity-builder@v0.10
-      #   with:
-      #     unityVersion: ${{ matrix.unityVersion }}
-      #     targetPlatform: ${{ matrix.targetPlatform }}
+      - uses: webbertakken/unity-builder@v0.10
+        with:
+          unityVersion: ${{ matrix.unityVersion }}
+          targetPlatform: ${{ matrix.targetPlatform }}
       # - uses: actions/upload-artifact@v1
       #   with:
       #     name: Build
       #     path: build
       - name: Change directory to build
         run: ls -R
-      - name: Current directory
+      - name: Current
         run: pwd
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.0.0
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: Assets/Scenes # The folder the action should deploy.
+          folder: build/WebGL # The folder the action should deploy.
