--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           unityVersion: ${{ matrix.unityVersion }}
           targetPlatform: ${{ matrix.targetPlatform }}
+          buildsPath: .
       # - uses: actions/upload-artifact@v1
       #   with:
       #     name: Build
@@ -58,4 +59,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.0.0
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: build/WebGL/ # The folder the action should deploy.
+          folder: WebGL # The folder the action should deploy.
