--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -59,4 +59,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.0.0
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: WebGL # The folder the action should deploy.
+          folder: WebGL/WebGL # The folder the action should deploy.
